Fixed the .getFirst() bug